<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F83332"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsc_home_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_F83332"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="56dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/home_card"
                android:orientation="vertical">

                <com.youth.banner.Banner
                    android:id="@+id/bn_home_banner"
                    android:layout_width="match_parent"
                    android:layout_height="126dp"
                    app:banner_default_image="@drawable/ic_banner_default"
                    app:indicator_height="8dp"
                    app:indicator_margin="4dp"
                    app:indicator_width="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="41dp"
                    android:layout_marginBottom="33dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/jzjk" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/fragment_home_jzjk"
                            android:textColor="#242424" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/jhnc" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/fragment_home_jhnc"
                            android:textColor="#242424" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/wdxw" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/fragment_home_wdxw"
                            android:textColor="#242424" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/home_card"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="22dp"
                        android:text="@string/fragment_home_mrjk"
                        android:textColor="#ff242424"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="12dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:src="@drawable/more" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="81dp"
                    android:layout_marginTop="22dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/home_health_card"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:text="@string/fragment_home_yszn"
                                android:textColor="@color/color_242424"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:text="@string/fragment_home_cjhlysp"
                                android:textColor="@color/color_242424"
                                android:textSize="10sp" />

                        </LinearLayout>

                        <ImageView
                            android:layout_width="61dp"
                            android:layout_height="match_parent"
                            android:src="@mipmap/logo" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/home_health_card"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:text="@string/fragment_home_ssjj"
                                android:textColor="@color/color_242424"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:text="@string/fragment_home_zjjjsshc"
                                android:maxLines="1"
                                android:maxEms="10"
                                android:ellipsize="end"
                                android:textColor="@color/color_242424"
                                android:textSize="10sp" />

                        </LinearLayout>

                        <ImageView
                            android:layout_width="61dp"
                            android:layout_height="match_parent"
                            android:src="@mipmap/logo" />


                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="22dp"
                        android:text="@string/fragment_home_zrht"
                        android:textColor="#ff242424"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="12dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:src="@drawable/more" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginRight="13dp"
                    android:layout_marginBottom="31dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/home_card"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="22dp"
                        android:text="@string/fragment_home_fxjksh"
                        android:textColor="#ff242424"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="12dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:src="@drawable/more" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginRight="13dp"
                    android:layout_marginBottom="31dp" />

            </LinearLayout>

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/dibuxiaoshi"
                android:layout_marginBottom="14dp"
                android:layout_marginTop="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



            <com.example.myapplication.WaveView
                android:id="@+id/wv_home_button"
                android:layout_width="match_parent"
                app:waveColor="@color/color_FFFFFF"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



</LinearLayout>